--- a/style.css
+++ b/style.css
@@ -1,230 +1,204 @@
-/* Guide Borders */
-
-/* html,body {border: .01rem solid rgba(221, 29, 29, 0.50);}  */
-
-/* header,main,section {border: .01rem solid rgba(255, 217, 0, 0.342);}  */
-
-.logo,.mockup,.copy,.button,.socials {border:.01rem solid rgb(4, 255, 121);}
-
- /*h1,p,button,.socials svg {border:.01rem solid rgb(255, 167, 4);} */
-
 /* Main Containers */
 
-html{
-    height:100vh;
-    font-size:62.5%;
-    color:white;
-    fill: white;    
-    background: hsl(257, 40%, 49%) url(images/bg-mobile.svg) no-repeat;
-    background-size: clamp(33rem,100vw,58rem);
-}
+    html{
+        height:100vh;
+        font-size:62.5%;
+        color:white;
+        fill: white;    
+        background: hsl(257, 40%, 49%) url(images/bg-mobile.svg) no-repeat;
+        background-size: clamp(37rem,100vw,100vw);
+    }
 
-body{
-    margin: auto;
-    display: grid;
-    align-items: center;
-    text-align: center;
-    grid-template-columns: minmax(32rem,1fr);
-    grid-template-rows: minmax(6.9rem,1.6fr) minmax(57rem,8fr) 1.8fr;
-    grid-template-areas:"header"
-                        "main"
-                        "social";
-}
+    body{
+        margin: auto;
+        display: grid;
+        text-align: center;
+        grid-template-columns: minmax(37rem,1fr);
+        grid-template-rows: 12rem 1fr 1fr;
+        grid-template-areas:"header"
+                            "main"
+                            "social";
+    }
 
-*{
-    height: 100%;
-    width: 100%;
-    box-sizing: border-box; 
-    font-family: 'Poppins', sans-serif;
-}
+    *{
+        height: 100%;
+        width: 100%;
+        box-sizing: border-box; 
+        font-family: 'Poppins', sans-serif;
+    }
 
 /* Sub-Containers I */
 
-header{
-    grid-area: header;
-    padding: clamp(2.5rem,3vh,5rem) 0 0 min(7vw,2.5rem);
-}
+    header{
+        grid-area: header;
+    }
 
-main{
-    grid-area: main;
-    display: grid;
-    grid-template-rows: .55fr 1fr;
-    grid-template-areas:"mockup"
-                        "copy";
-    align-items:flex-start;
-}
+    main{
+        grid-area: main;
+        display: grid;
+        grid-template-rows: auto minmax(30rem,1.2fr);
+        grid-template-areas:"mockup"
+                            "copy";
+    }
 
-section{
-    grid-area: social;
-}
+    section{
+        grid-area: social;
+    }
 
 /* Sub-Containers II */
 
-.logo{
-    background-image: url(images/logo.svg);
-    background-size: 14rem;
-    background-position: left top;
-}
+    .mockup{
+        grid-area: mockup;
+    }
 
-.mockup{
-    background-image: url(images/illustration-mockups.svg);
-    background-size: clamp(28rem,34vh,40rem);
-    background-position: top center;
-    grid-area: mockup;
-}
+    .copy{
+        grid-area:copy;
+        padding:clamp(0rem,4.5vh,4rem) 2.8rem 0 2.8rem;
+    }
 
-.copy{
-    grid-area:copy;
-}
+    .button{
+        margin-top:3vh;
+        height:fit-content;
+    }
 
-.button{
-    margin-top:3vh;
-    height:5.5rem;
-    padding-bottom:1.3rem;
-}
-
-.socials{
-    display: flex;
-    justify-content: center;
-}
-
-.logo,.mockup{
-    background-repeat: no-repeat;
-    background-origin: content-box;
-}
+    .socials{
+        display: flex;
+        justify-content: center;
+        padding-top:clamp(2rem,6vh,5rem);
+    }
 
 /* Sub-Containers III */
 
-h1{
-    font-size: clamp(2rem, 6.8vw, 2.5rem); 
-    padding-top:
-}
+    .logo img{
+        width:14rem;
+        float:left;
+        margin-left:2.5rem;
+        padding-bottom:2.5rem;
+    }
 
-p{
-    font-family: 'Open Sans', sans-serif;
-    font-size: clamp(1.3rem, 4.5vw, 1.8rem);
-    line-height: 2.7rem; 
-}
+    .mockup img{
+        width:clamp(30rem,80vw,50rem);
+    }
 
-button{
-    padding-top: .4rem;
-    color: hsl(257, 40%, 49%);
-    background-color: white;
-    border: none;
-    border-radius: 3rem;  
-    box-shadow: .1rem .4rem .8rem hsl(257, 40%, 30%);
-    font-size: 1.4rem;
-    width: clamp(15rem,61vw,22rem);
-}
+    h1{
+        font-size: clamp(2rem, 6.8vw, 2.5rem); 
+    }
 
-.socials svg{
-    width: clamp(2rem,8vw,3.5rem);
-    height:fit-content;
-}
+    p{
+        font-family: 'Open Sans', sans-serif;
+        font-size: clamp(1.3rem, 4.5vw, 1.8rem);
+        line-height:max(2.7rem,2vw);
+    }
 
-h1,p{
-    padding:0 2.8rem;
-    height:fit-content;
-}
+    button{
+        padding-top: .4rem;
+        color: hsl(257, 40%, 49%);
+        background-color: white;
+        border: none;
+        border-radius: 3rem;  
+        box-shadow: .1rem .4rem .8rem hsl(257, 40%, 30%);
+        font-size: 1.4rem;
+        width: clamp(15rem,61vw,22rem);
+        height:4.5rem;
+    }
+
+    .socials svg{
+        width: clamp(2rem,8vw,3.5rem);
+        height:fit-content;
+    }
+
+    h1,p{
+        height:fit-content;
+    }
 
 /* Pseudo-Classes */
 
-:hover{
-    cursor: pointer;
-}
+    :hover{
+        cursor: pointer;
+    }
 
-button:hover{
-    background-color:hsl(300, 69%, 71%);
-}
+    button:hover{
+        background-color:hsl(300, 69%, 71%);
+    }
 
-.socials svg:nth-child(1), :nth-child(2){
-    margin-right: 1rem;
-}
+    .socials svg:nth-child(1), :nth-child(2){
+        margin-right: 1rem;
+    }
 
-.socials svg:hover{
-    fill:hsl(300, 99%, 61%);
-}
+    .socials svg:hover{
+        fill:hsl(300, 99%, 61%);
+    }
 
 /*Media Queries*/
-@media screen and (min-width:578px){
-html{
-    background:hsl(257, 40%, 49%) url(images/bg-desktop.svg) no-repeat;
-    /* background-size: auto 100vh; */
-    background-size: 95vw auto;
-}
 
-body{
-    text-align: left;
-}
+@media screen and (orientation:landscape){
 
-*{
-    padding:0;
-    margin:0;
-}
+/*Main Containers*/
+
+    html{
+        background:hsl(257, 40%, 49%) url(images/bg-desktop.svg) no-repeat;
+        /* background-size: 95vw auto; */
+        background-size: auto 100vh;
+    }
+
+    body{
+        text-align: left;
+        grid-template-columns: minmax(95rem,1fr);
+        grid-template-rows: 20rem 6fr 1fr;
+    }
 
 /* Sub-Containers I */
 
-.copy{
-    display:flex;
-    flex-direction: column;
-}
-
-header{
-    /* padding:5rem 0 0 6.5rem; */
-}
-
-main{
-    /* padding:0 0 0 6.5rem; */
-    grid-template-rows: minmax(50rem,1fr);
-    grid-template-columns:1.4fr 1fr;
-    grid-template-areas:"mockup copy"
-                        "mockup copy";
-}
-
+    main{
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr;
+        grid-template-areas:"mockup copy";
+    }
+ 
 /* Sub-Containers II */
 
-.logo{
-    background-size: 22rem;
-}
+    .mockup{
+        width:100%;
+    }
 
-.mockup{
-    background-size: 51.5vw ;
-    background-position: left center;
-}
+    .copy{
+        padding:2rem 7% 0 7%;
+    }
 
-h1{
-    font-size:4rem;
-    /* padding:0 10rem 0 0; */
-}
-
-p{
-    font-size:1.8rem; 
-    /* padding:0 4rem 0 0; */
-}
-
-button{
-    width:20rem;
-    height:5rem;
-}
-
-.socials{
-    justify-content:flex-end;
-    align-self: center;
-    /* padding: 0 6rem 3rem 0rem; */
-}
+    .socials{
+        justify-content:flex-end;
+        padding:0 4.5rem 0 0;
+        
+    }
 
 /* Sub-Containers III */
 
-.socials svg{
-    
-}
+    .logo img{
+        width: 20rem;
+    }
 
-h1,p{
-    width:fit-content;
-}
+    .mockup img{
+        width:clamp(50rem,51.6vw,120rem);
+        object-fit: contain;
+        object-position: top;
+    }
+
+    .logo img, .mockup img{
+        margin-left: 4.8vw;
+        padding:0;
+    }
+    
+    h1{
+        font-size:clamp(2.5rem,2.8vw,6rem);
+    }
+
+    p{
+        font-size:clamp(1.4rem,1.3vw,3rem); 
+    }
 
 /* Pseudo-Classes */
-.socials svg:nth-child(1), :nth-child(2){
-    /* margin-right: 1.5rem; */
-}
+
+    .socials svg:nth-child(1), :nth-child(2){
+        margin-right: 1.5rem;
+    }
 }
