--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@
         width:14rem;
         float:left;
         margin-left:2.5rem;
-        padding-bottom:2.5rem;
+        padding-top:2.5rem;
     }
 
     .mockup img{
