--- a/style.css
+++ b/style.css
@@ -136,8 +136,7 @@
 
     html{
         background:hsl(257, 40%, 49%) url(images/bg-desktop.svg) no-repeat;
-        /* background-size: 95vw auto; */
-        background-size: auto 100vh;
+        background-size: auto 100%;
     }
 
     body{
