--- a/style.css
+++ b/style.css
@@ -3,14 +3,15 @@
     html{
         height:100vh;
         font-size:62.5%;
-        color:white;
-        fill: white;    
-        background: hsl(257, 40%, 49%) url(images/bg-mobile.svg) no-repeat;
-        background-size: clamp(37rem,100vw,100vw);
+        color:white;   
     }
 
     body{
+        background: hsl(257, 40%, 49%) url(images/bg-mobile.svg) no-repeat;
+        background-size: clamp(37rem,100vw,100vw);
         margin: auto;
+        height:100%;
+        min-width:100%;
         display: grid;
         text-align: center;
         grid-template-columns: minmax(37rem,1fr);
@@ -21,7 +22,6 @@
     }
 
     *{
-        width: 100%;
         box-sizing: border-box; 
         font-family: 'Poppins', sans-serif;
     }
@@ -40,7 +40,7 @@
                             "copy";
     }
 
-    section{
+    footer{
         grid-area: social;
     }
 
@@ -101,9 +101,9 @@
         height:4.5rem;
     }
 
-    .socials svg{
+    a > svg{
+        fill:white;
         width: clamp(2rem,8vw,3.5rem);
-        height:fit-content;
     }
 
     h1,p{
@@ -120,11 +120,11 @@
         background-color:hsl(300, 69%, 71%);
     }
 
-    .socials svg:nth-child(1), :nth-child(2){
+    .fb , .twt{
         margin-right: 1rem;
     }
 
-    .socials svg:hover{
+    a > svg:hover{
         fill:hsl(300, 99%, 61%);
     }
 
@@ -134,12 +134,9 @@
 
 /*Main Containers*/
 
-    html{
+    body{        
         background:hsl(257, 40%, 49%) url(images/bg-desktop.svg) no-repeat;
-        background-size: auto 100%;
-    }
-
-    body{
+        background-size: cover;
         text-align: left;
         grid-template-columns: minmax(95rem,1fr);
         grid-template-rows: 20rem 6fr 1fr;
@@ -197,7 +194,7 @@
 
 /* Pseudo-Classes */
 
-    .socials svg:nth-child(1), :nth-child(2){
+    .fb , .twt{
         margin-right: 1.5rem;
     }
 }
